# DS569k-viewer

./: .gitignore  README.md  embed.py  embed30.parquet  foldseek.py  query_foldseek.ipynb  rcsb_pdb_4O75.fasta  requirements.txt  test.ipynb
notebooks/: add_back_sequence.ipynb  add_taxa.ipynb  compute_embeddings copy.ipynb  compute_embeddings.ipynb  esm_to_proteinclip.ipynb  filter_checkpoint.ipynb  function_fetch.ipynb  hf_change.ipynb  just_embeddings.ipynb  nomic.ipynb  nomic_run.ipynb  pclip_embed.ipynb  protein_clip.py  requirements.txt  sim.ipynb  subset.ipynb  test.ipynb  umap_clip.ipynb  unitprot.ipynb  view_parq.ipynb
viewer/server/: .gitignore  Makefile  install.sh  pyproject.toml  requirements.noversion.txt  requirements.txt
viewer/server/src/: embed_proteinclip.py  protein_clip.py  server.py  utils.py
viewer/website/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
viewer/website/src/: App.svelte  app.css  backend.ts
viewer/website/src/components/: Header.svelte
viewer/website/src/openapi/: index.ts
viewer/website/src/openapi/models/: EmbeddingsData.ts  ProteinCLIPQuery.ts  ProteinData.ts  SimilarityQuery.ts  TaxonomyInfo.ts
viewer/website/src/openapi/services/: DefaultService.ts
