[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pandas>=2.2.3",
    "fastparquet>=2024.5.0",
    "fair-esm>=2.0.0",
    "onnxruntime>=1.19.2",
    "numpy<2",
    "torch==2.2.1",
    "wget>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
